# erio

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: app.rs  config.rs  docker.rs  errors.rs  events.rs  lib.rs  logging.rs  main.rs  state.rs  terminal.rs
src/ui/: focus.rs  input.rs  layout.rs  mod.rs  panel.rs  renderer.rs
