[package]
name = "erio"
version = "0.1.0"
edition = "2024"
authors = ["erio contributors"]
description = "A terminal UI for Docker, written in Rust"
license = "MIT"
repository = "https://github.com/binertia/erio"
keywords = ["docker", "tui", "containers", "ratatui", "cli"]
categories = ["command-line-utilities"]
rust-version = "1.85"

[dependencies]
bollard = "0.19"
crossterm = "0.28"
futures-util = "0.3"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
toml = "0.9"
tracing = "0.1"
unicode-width = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3"
